; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_carthw_pier_write16.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_carthw_pier_write16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_UIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"pier w16 [%06x] %04x @%06x\00", align 1
@SekPc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @carthw_pier_write16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carthw_pier_write16(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = and i32 %5, 16776960
  %7 = icmp ne i32 %6, 10563584
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @PicoWrite16_io(i32 %9, i32 %10)
  br label %23

12:                                               ; preds = %2
  %13 = load i32, i32* @EL_UIO, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %4, align 4
  %16 = and i32 %15, 65535
  %17 = load i32, i32* @SekPc, align 4
  %18 = call i32 @elprintf(i32 %13, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %16, i32 %17)
  %19 = load i32, i32* %3, align 4
  %20 = add nsw i32 %19, 1
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @carthw_pier_write8(i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %12, %8
  ret void
}

declare dso_local i32 @PicoWrite16_io(i32, i32) #1

declare dso_local i32 @elprintf(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @carthw_pier_write8(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
